--- a/notebooks/tests.ipynb
+++ b/notebooks/tests.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "7f465c82-5f32-4909-b375-57b57fe7544a",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -21,8 +27,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "2023-12-14 12:00:20.096789: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-12-14 12:00:20.162415: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-12-14 12:00:20.162554: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-12-14 12:00:20.162618: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-12-14 12:00:20.179134: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -46,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "31ff69d9-534c-4922-ba7d-8a08b4486722",
    "metadata": {},
    "outputs": [],
@@ -55,8 +65,8 @@
     "    '/srv/PU-dataset/unlabeled.csv',\n",
     "    'id',\n",
     "    '/srv/PU-dataset/dataset_unlabeled',\n",
-    "    reliable_positive_fn=lambda row: row['VotesMean'] > 6.5,\n",
-    "    positive_fn=lambda row: row['VotesMean'] >= 5.0,\n",
+    "    reliable_positive_fn=lambda row, _: row['VotesMean'] > 6.5,\n",
+    "    positive_fn=lambda row, _: row['VotesMean'] >= 5.0,\n",
     "    test_frac=0.2,\n",
     "    random_state=1234\n",
     ")\n",
@@ -72,7 +82,6 @@
    "outputs": [],
    "source": [
     "extractor = ViTExtractor('test_ava')\n",
-    "#extractor = AutoencoderExtractor(input_shape=(224, 224, 3), filters=[8,16,32,64,64])\n",
     "positive_features, unlabeled_features = extractor.extract_features(paths_train_positive, paths_train_unlabeled)\n",
     "\n",
     "positive_features = positive_features.drop(['label', 'id'], axis=1).to_numpy()\n",
