Begin implementing non-negative PU

--- a/notebooks/experiment_positive_thresholds_ava.ipynb
+++ b/notebooks/experiment_positive_thresholds_ava.ipynb
@@ -159,6 +159,46 @@
       "Number of negatives: 15496\n",
       "Number of positives: 44110\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished training classifier\n",
+      "Validation metric for iteration 3: 1.6192452714066539\n",
+      "Moving 1038 from unlabeled to negative and from unlabeled to positive\n",
+      "Iteration #4\n",
+      "Number of negatives: 16534\n",
+      "Number of positives: 45148\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished training classifier\n",
+      "Validation metric for iteration 4: 1.6175223087532815\n",
+      "Moving 1017 from unlabeled to negative and from unlabeled to positive\n",
+      "Iteration #5\n",
+      "Number of negatives: 17551\n",
+      "Number of positives: 46165\n"
+     ]
     }
    ],
    "source": [
